@@ -1,3 +1,7 @@
+2006-12-21	fabian
+
+	* Moved some scrolling code from VT100Screen to PTYSession to avoid possible crashes.
+	
 2006-12-20	fabian
 
 	* Fixed a selection location bug (#1608727).
